--- a/TechnoPurAccounts/TechnoPurAccounts.csproj
+++ b/TechnoPurAccounts/TechnoPurAccounts.csproj
@@ -231,6 +231,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoggedUserInfoController.cs" />
     <Compile Include="Controllers\PostFileUploadController.cs" />
+    <Compile Include="Controllers\ReturnOrdersController.cs" />
     <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="dashboard.aspx.cs">
@@ -258,6 +259,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\add_user.cs" />
+    <Compile Include="Models\ClsReturn.cs" />
     <Compile Include="Models\EmailTempletes.cs" />
     <Compile Include="Models\FileUpload1.cs" />
     <Compile Include="Models\MD5.cs" />
@@ -266,6 +268,13 @@
     <Compile Include="Models\UserAuthntication\Startup.cs" />
     <Compile Include="Models\UserAuthntication\UserLogin.cs" />
     <Compile Include="Models\UserAuthntication\UserMasterRepository.cs" />
+    <Compile Include="processing-returns.aspx.cs">
+      <DependentUpon>processing-returns.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="processing-returns.aspx.designer.cs">
+      <DependentUpon>processing-returns.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Profile.aspx.cs">
       <DependentUpon>Profile.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -274,6 +283,13 @@
       <DependentUpon>Profile.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Return_Order\returns.aspx.cs">
+      <DependentUpon>returns.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Return_Order\returns.aspx.designer.cs">
+      <DependentUpon>returns.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Return_Order\add_company.aspx.cs">
       <DependentUpon>add_company.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -516,7 +532,9 @@
     <Content Include="PasswordCheck\password.css" />
     <Content Include="PasswordCheck\password.js" />
     <Content Include="PasswordCheck\passwordstrength.jpg" />
+    <Content Include="processing-returns.aspx" />
     <Content Include="Profile.aspx" />
+    <Content Include="Return_Order\returns.aspx" />
     <Content Include="Return_Order\add_company.aspx" />
     <Content Include="Return_Order\add_emp.aspx" />
     <Content Include="Return_Order\add_new_return.aspx" />
